# ocarina-with-playwright-example

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: dev_ci.yml  e2e.yml  main_ci.yml
src/: main.py
src/api/: get_otp_history.py  retrieve_dashboard_otp_code.py
src/api/constants/: endpoints.py
src/caches/: l1.py  reserve_free_cache_key.py
src/constants/pages/: chaotic_form.py  corsicamon.py  dashboard.py  donkey_sausage_eater_detector.py  homepage.py  madness.py  random_error_page.py  random_loaders.py  sacred_upload.py
src/constants/sys/: redis_keys.py  transient_errors.py
src/lib/custom_errors/: http.py  transient_error.py
src/lib/ext/redis/: client.py
src/pages/: chaotic_form.py  homepage.py  random_error.py  random_loaders.py
src/pages/corsicamon/: enter_api_key.py  main.py
src/pages/dashboard/: login.py  protected_page.py  welcome_page.py
src/pages/donkey_sausage_detector/: base.py  bsod.py  ids_bypassed.py  matchers.py
src/pages/madness/: base.py  cors.py  matchers.py  this_is_bastia.py
src/pages/sacred_upload/: sacred_upload.py
src/tests/campaigns/: corsicamon.py  dashboard_login.py  global_smoke_tests.py  randomness.py  sacred_upload.py
src/tests/cycles/: e2e.py
src/tests/scenarios/corsicamon/: add_corsicamon.py  back_to_igoristan.py  enter_api_key.py  new_draw.py
src/tests/scenarios/dashboard/: back_to_igoristan.py
src/tests/scenarios/homepage/: verify_homepage.py
src/tests/suites/: global_smoke_tests.py  randomness.py
(+50 files in other folders)
