[project]
name = "ocarina-with-playwright"
version = "0.0.0"
description = "Toy project using Ocarina, driven by its Playwright adapter"
requires-python = ">=3.14"
dependencies = [
    "ocarina>=1.1.3",
    "python-docx>=1.2.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.2.2",
    "dogpile.cache>=1.5.0",
    "requests>=2.33.0",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.17.0",
    "mypy-extensions>=1.1.0",
    "typing-extensions>=4.14.0",
    "pre-commit>=4.5.1",
    "types-requests>=2.33.0.20260327",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # "B008",  # * ... NEVER ignore this rule without knowing very well what you are doing: https://docs.astral.sh/ruff/rules/function-call-in-default-argument/
    "ANN002",
    "ANN003",
    "ANN201",
    "TRY003",
    "C901",
    "D203",    # * ... Ignore incorrect-blank-line-before-class to avoid conflict with D211
    "D213",    # * ... Ignore multi-line-summary-second-line to avoid conflict with D212
    "COM812",  # * ... Ignore COM812 to prevent conflicts with Ruff's formatter (auto-fix)
]

[tool.ruff]
exclude = ["**/.venv/**", "**/bin/**", "**/__init__.py", "**/__bypass_linter__"]
